--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -40,6 +40,12 @@ if($this->inputFilterOriginal ==1)
 
 <style>
 @media (max-width:610px){
+
+  body > .panel.panel-default.pull-left {
+    max-width: 100%;
+    overflow-y: hidden;
+  }
+
   #explore-content .GridFlex .content {
     padding-right: 0;
     min-width: 100%;
@@ -57,7 +63,7 @@ if($this->inputFilterOriginal ==1)
   #explore-content .GridFlex .sidebar-right {
     flex: none !important;
     width: 100%;
-    padding: 0;    
+    padding: 0;
   }
 }
 </style>
