--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -381,6 +381,10 @@ out: ../css/header.css, sourcemap: true, compress: true
           width: 24px;
           height: 27px;
         }
+
+        &.Books {
+          width: 38px;
+        }
       }
     }
 
