--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -54,10 +54,11 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 <style>
   @media (max-width:610px){
 
-    body {
+    body > .panel.panel-default.pull-left {
       max-width: 100%;
-      overflow-x: hidden;
+      overflow-y: hidden;
     }
+
 
 		.sidebar-left {
 		    background-color: #e4e4e4;
