explore content css mobile fix

--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -65,6 +65,42 @@ if($this->inputFilterOriginal ==1)
     width: 100%;
     padding: 0;
   }
+
+  .explore-products .product-list .explore-product {
+    position: relative;
+    padding-left: 20px;
+    padding-right: 50px;
+  }
+
+  .explore-products .product-list .explore-product > col-xs-1 {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 0;
+  }
+
+  .explore-products .product-list .explore-product .explore-product-plings {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 0;
+  }
+
+  .explore-products .product-list .explore-product .explore-product-imgcolumn {
+    width: 20%;
+  }
+
+  .explore-products .product-list .explore-product .explore-product-details {
+    width: 80%;
+  }
+
+  .explore-products .product-list .explore-product .explore-product-plings {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    width: 50px;
+  }
+
 }
 </style>
 
