--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -72,7 +72,7 @@ if($this->inputFilterOriginal ==1)
     padding-right: 50px;
   }
 
-  .explore-products .product-list .explore-product > col-xs-1 {
+  .explore-products .product-list .explore-product > .col-xs-1 {
     position: absolute;
     top: 10px;
     left: 10px;
