--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -94,6 +94,12 @@ if($this->inputFilterOriginal ==1)
     width: 50px;
   }
 
+  .pling-nav-tabs ul.nav-tabs>li:last-child {
+    float: right;
+    padding: 10px;
+    font-size: 12px;
+  }
+
 }
 </style>
 
