--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -94,10 +94,18 @@ if($this->inputFilterOriginal ==1)
     width: 50px;
   }
 
+  .explore-products .product-list .explore-product .explore-product-plings .rating {
+    width: 100%;
+  }
+
   .pling-nav-tabs ul.nav-tabs>li:last-child {
     float: right;
     padding: 10px;
     font-size: 12px;
+  }
+
+  #explore-content .sidebar-right-info .prod-widget-box {
+    width: 100%;
   }
 
 }
