--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -338,6 +338,13 @@ out: ../css/header.css, sourcemap: true, compress: true
   }
 }
 */
+
+@media (min-width:612px) and (max-width:720px){
+  #site-header {
+    padding: 0 50px 0 10px;
+  }
+}
+
 @media (max-width: 610px){
 
   #mobile-site-header {
