--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -39,6 +39,19 @@ if($this->inputFilterOriginal ==1)
 ?>
 
 <style>
+@media (min-width:612px) and (max-width:720px){
+  #explore-content .GridFlex .content {
+    padding-right: 15px;
+    min-width: 400px;
+  }
+
+  #explore-content .GridFlex .sidebar-right {
+    width: 400px;
+    flex: none;
+    margin: 0 auto;
+  }
+}
+
 @media (max-width:611px){
 
   body > .panel.panel-default.pull-left {
