--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -393,6 +393,11 @@ out: ../css/header.css, sourcemap: true, compress: true
           width: 38px;
         }
       }
+
+      &.KFCE-Pling-CC {
+        width: 100px !important;
+        height: 32px;
+      }
     }
 
     #mobile-site-header-menus-container {
