--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2556,7 +2556,8 @@ span.page-views {
         background: #f5f5f5;
         padding: 10px;
         border-radius: 5px;
-
+        max-height: 400px;
+        overflow-y:auto;
         h3 {
             text-align: center;
             font-weight: 400;
