--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1,4 +1,4 @@
-out: ../css/metaheader.css, sourcemap: true, compress: true
+out: ../css/stylesheet.css, sourcemap: true, compress: true
 
 @import "stylesheets/mixins.less";
 /** @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);**/
@@ -6556,7 +6556,7 @@ main#plings-page{
 
 /** MOBILE RESPONSIVE FIXES */
 
-// home page 
+// home page
 
 @media (max-width:611px){
 
