--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -338,7 +338,7 @@ out: ../css/header.css, sourcemap: true, compress: true
   }
 }
 
-
+/*
 @media (min-width:612px) and (max-width:720px){
   #site-header {
     padding: 0 50px 0 10px;
@@ -662,3 +662,4 @@ out: ../css/header.css, sourcemap: true, compress: true
     }
   }
 }
+*/
