--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -6593,7 +6593,7 @@ main#plings-page{
           border-bottom: 1px solid #ccd4d8;
         }
 
-        .GridFlex-cell.content {
+        #explore-content.startpage-store .GridFlex-cell.content {
           padding: 0;
           min-width: 100% !important;
           padding: 0 5px;
